# CaaS

./: .gitignore  README.md  main.py  pyproject.toml
app/: config.py  main.py
app/cli/: get_cuts.py  make_markup.py  show_examples.py
app/src/: main.py
app/src/repositories/: __init__.py
app/src/repositories/mlflow/: main.py
app/src/repositories/s3/: main.py
app/src/utils/: __init__.py  file_reading_benchmark.py  storage.py  torch_video_reader.py
scripts/: mlflow_load_pytorch.py  mlflow_register_pytorch.py
tests/: test_torch_video_reader.py
video_cutter/models/: cnn_model.py
