[project]
name = "caas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.5.0",
    "av>=17.0.1",
    "loguru>=0.7.3",
    "memory-profiler>=0.61.0",
    "mlflow>=3.11.1",
    "psutil>=7.0.0",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "safetensors>=0.7.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.3",
]

# Сборки torch/torchvision с CUDA (см. https://pytorch.org/get-started/locally/ )
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
